[gd_scene load_steps=2 format=3 uid="uid://cn85mtsod4km3"]

[ext_resource type="Script" uid="uid://c6acc41h83ar2" path="res://Scripts/Main Menu/opzioni.gd" id="1_m5ied"]

[node name="Opzioni" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 351.0
offset_top = 174.0
offset_right = 961.0
offset_bottom = 426.0
script = ExtResource("1_m5ied")

[node name="SFX" type="Label" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 162.0
offset_right = 318.0
offset_bottom = 217.0
theme_override_font_sizes/font_size = 40
text = "SFX"

[node name="Musica" type="Label" parent="."]
layout_mode = 0
offset_left = 222.0
offset_top = 40.0
offset_right = 358.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 40
text = "Musica"

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 102.0
offset_right = 568.0
offset_bottom = 118.0

[node name="SfxSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 218.0
offset_right = 559.0
offset_bottom = 234.0

[node name="BackToMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 147.0
offset_top = 384.0
offset_right = 503.0
offset_bottom = 509.0
theme_override_font_sizes/font_size = 40
text = "Torna al Menu"

[node name="MuteButton" type="Button" parent="."]
layout_mode = 0
offset_left = -316.0
offset_top = 71.0
offset_right = -15.0
offset_bottom = 135.0
theme_override_font_sizes/font_size = 40
text = "Disattiva Audio"

[connection signal="pressed" from="MuteButton" to="." method="_on_mute_button_pressed"]
